# python_flet_sqlite_practice

./: .gitignore  app.py  appveyor.yml  pyproject.toml  requirements.txt
