[tool.poetry]
name = "fletwithdatabase"
version = "0.1.0"
description = ""
authors = ["KokiMaruno <marunojoaquin5120@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.3.2"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
